--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,4 +2,5 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 28
-    defaultConfig
+    defaultConfig {
+        applicat
