--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,4 +3,4 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicat
+        applicationId "com.sajidkhanaf
