--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,4 +3,5 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.sajidkhanaf
+        applicationId "com.sajidkhanafridi.coin"
+       
