Some more cleaning

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,4 +4,5 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.sajidkhanafridi.coin"
-       
+        minSdkVersion 21
+ 
