Another test commit

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,4 +5,5 @@ android {
     defaultConfig {
         applicationId "com.sajidkhanafridi.coin"
         minSdkVersion 21
-        targetSdk
+        targetSdkVersion 28
+        
