--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,4 +7,5 @@ android {
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
-        versionName 
+        versionName "1.0"
+        te
