net: usb: Fix memory leak on Tx data path

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,4 +13,4 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFi
+            proguardFiles getDefaultProguardFile('proguard-an
