--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,4 +19,5 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', includ
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+   
