md/raid1: fix read balance when a drive is write-mostly.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,4 +20,4 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 
+    implementation 'com.android.support:
