--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,4 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.an
+    androidTestImplementation 'com.android.support.t
