--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,4 +4,5 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@
+        android:icon="@mipmap/ic_launcher"
+       
