--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,4 +5,4 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-       
+        android:label="@string/a
