--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,4 +13,4 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-    
+                <category and
