--- a/build.gradle
+++ b/build.gradle
@@ -1,1 +1,1 @@
-// Top-level build file where you can add configuration options co
+// Top-level build file where you can add configuration options common to all sub-proje
