--- a/build.gradle
+++ b/build.gradle
@@ -7,4 +7,5 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gr
+        classpath 'com.android.tools.build:gradle:3.4.0'
+        
