--- a/build.gradle
+++ b/build.gradle
@@ -9,4 +9,4 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.0'
         
-        // NOTE: Do not place your
+        // NOTE: Do not place your application depende
