--- a/build.gradle
+++ b/build.gradle
@@ -9,4 +9,5 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.0'
         
-        // NOTE: Do not place your application dependencies here; they belo
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individua
