--- a/build.gradle
+++ b/build.gradle
@@ -10,4 +10,4 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.4.0'
         
         // NOTE: Do not place your application dependencies here; they belong
-        // in the individua
+        // in the individual module build.gradle fil
