--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
-# Gradle settings conf
+# Gradle settings configured through the ID
