--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
 # Project-wide Gradle settings.
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
-# any settin
+# any settings specified in thi
