--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,4 @@
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
-# For more details o
+# For more details on how to configure your 
