--- a/gradle.properties
+++ b/gradle.properties
@@ -3,4 +3,5 @@
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
 # For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_env
+# http://www.gradle.org/docs/current/userguide/build_environment.html
+# Specifies the JV
