--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,5 @@
 # any settings specified in this file.
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
-# Specifies the JVM arguments used f
+# Specifies the JVM arguments used for the daemon process.
+#
