--- a/gradle.properties
+++ b/gradle.properties
@@ -5,4 +5,4 @@
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
-# The setting is particula
+# The setting is particularly useful for tweakin
