--- a/gradle.properties
+++ b/gradle.properties
@@ -6,4 +6,4 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org
+org.gradle.jvmargs=
