--- a/gradle.properties
+++ b/gradle.properties
@@ -8,4 +8,4 @@
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m
 # When configured, Gradle will run in incubating parallel mode.
-# This option should 
+# This option should only be used wit
